EXTRA_DIST= rc.lhttpd  rc.lhttpd.ini setup.sh rfc2616-zh_CN.html \
rfc2616/index.html \
rfc2616/rfc2616.html \
rfc2616/rfc2616-sec10.html \
rfc2616/rfc2616-sec11.html \
rfc2616/rfc2616-sec12.html \
rfc2616/rfc2616-sec13.html \
rfc2616/rfc2616-sec14.html \
rfc2616/rfc2616-sec15.html \
rfc2616/rfc2616-sec16.html \
rfc2616/rfc2616-sec17.html \
rfc2616/rfc2616-sec18.html \
rfc2616/rfc2616-sec19.html \
rfc2616/rfc2616-sec1.html \
rfc2616/rfc2616-sec20.html \
rfc2616/rfc2616-sec21.html \
rfc2616/rfc2616-sec2.html \
rfc2616/rfc2616-sec3.html \
rfc2616/rfc2616-sec4.html \
rfc2616/rfc2616-sec5.html \
rfc2616/rfc2616-sec6.html \
rfc2616/rfc2616-sec7.html \
rfc2616/rfc2616-sec8.html \
rfc2616/rfc2616-sec9.html
